--- a/studycafe/src/main/resources/templates/login/loginForm.html
+++ b/studycafe/src/main/resources/templates/login/loginForm.html
@@ -19,20 +19,22 @@
     <div class="py-5 text-center">
         <h2>로그인</h2>
     </div>
-    <form th:action th:object="${UserLogin}" method="post">
+    <form th:action="@{/users/login}" th:object="${userLogIn}" method="post">
         <div th:if="${#fields.hasGlobalErrors()}">
             <p class="field-error" th:each="err : ${#fields.globalErrors()}"
                th:text="${err}">전체 오류 메시지</p>
         </div>
         <div>
             <label for="loginId">로그인 ID</label>
-            <input type="text" id="loginId" th:field="*{email}" class="formcontrol"
+            <input type="email" id="loginId" th:field="*{email}" class="form-control"
+                   name="email"
                    th:errorclass="field-error">
             <div class="field-error" th:errors="*{email}" />
         </div>
         <div>
             <label for="password">비밀번호</label>
             <input type="password" id="password" th:field="*{password}"
+                   name="password"
                    class="form-control"
                    th:errorclass="field-error">
             <div class="field-error" th:errors="*{password}" />
